kubernetes-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestration-frontend
spec:
  selector:
    app: orchestration-frontend
  ports:
    - protocol: TCP
      port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: orchestration-frontend-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sandbox.dissco.tech/orchestration`)
      kind: Rule
      services:
        - name: orchestration-frontend
          namespace: default
          port: 3000
